# shootdpi

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.cross  LICENSE.md  README.md  build.rs
.github/workflows/: rust.yml
binaries/: ciadpi-i686  ciadpi-mips
socks_manager/: Cargo.toml
socks_manager/src/: lib.rs  windows.rs
src/: main.rs
strategies/: beeline-home  general  megafon-central  rostelekom-nwtelecom
