[package]
name = "shootdpi"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
tempfile = "3"
dirs = "6.0.0"
socks_manager = { path = "./socks_manager" }

[profile.release]
opt-level = "z"   
lto = true   
codegen-units = 1     
panic = "abort"     
strip = "debuginfo"     
overflow-checks = false 
debug = false           
